--- a/pom.xml
+++ b/pom.xml
@@ -15,9 +15,10 @@
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
-				<groupId>com.google.android</groupId>
+				<groupId>android</groupId>
 				<artifactId>android</artifactId>
-				<version>4.1.1.4</version>
+				<version>4.2_r1</version>
+				<scope>provided</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.google.android.maps</groupId>
@@ -25,9 +26,9 @@
 				<version>17_r1</version>
 			</dependency>
 			<dependency>
-				<groupId>com.google.android</groupId>
-				<artifactId>support-v4</artifactId>
-				<version>r7</version>
+				<groupId>android.support</groupId>
+				<artifactId>compatibility-v4</artifactId>
+				<version>11</version>
 			</dependency>
 			<dependency>
 				<groupId>com.actionbarsherlock</groupId>
